# rs-image-compressor

./: CONFIG.md  Cargo.toml  README.md
schema/: schema.json
src/: compressor.rs  config_json.rs  error.rs  file.rs  file_type.rs  image.rs  main.rs
src/compressor/: gif_compressor.rs  heif_compressor.rs  jpeg_compressor.rs  pdf_compressor.rs  png_compressor.rs  svg_compressor.rs  webp_compressor.rs
src/file/: file_type.rs
src/image/: image_type.rs
src/imaging/: transform.rs
src/io/: file.rs
