[package]
name = "rs-image-compressor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
oxipng = { version = "9.1.4", features = ["parallel", "zopfli", "filetime"], default-features = false }
image = "0.25.5"
anyhow = "1.0.97"
jsonschema = "0.29.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
