[package]
name = "rs-image-compressor"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
oxipng = { version = "9.1.4", features = ["parallel", "zopfli", "filetime"], default-features = false }
image = "0.25.5"
anyhow = "1.0.97"
jsonschema = "0.29.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
mozjpeg = "0.10.13"
little_exif = "0.6.3"

[profile.release]
opt-level = "s"       # サイズと速度のバランスを取る最適化
lto = "fat"           # 最大限のリンク時最適化を有効化
codegen-units = 1     # コード生成ユニットを減らし、最適化を強化
panic = "abort"       # panic 時に 'unwind' ではなく 'abort' を使用
strip = "symbols"     # シンボル情報を削除し、必要なデバッグ情報は保持
