[package]
name = "rs-image-compressor"
version = "0.1.17"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
oxipng = { version = "9.1.4", features = ["parallel", "zopfli", "filetime"], default-features = false }
image = "0.25.5"
anyhow = "1.0.97"
jsonschema = "0.30.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
mozjpeg = "0.10.13"
little_exif = "0.6.3"
imagequant = "4.3.4"
webp = "0.3.0"
gifski = "1.33.0"
rgb = "0.8.50"
libheif-rs = "2.2.0"
infer = "0.19.0"
lopdf = "0.36.0"
flate2 = "1.1.1"
usvg = "0.45.1"
lcms2 = "6.1.0"
thiserror = "2.0.12"

[profile.release]
opt-level = "s"       # サイズと速度のバランスを取る最適化
lto = "fat"           # 最大限のリンク時最適化を有効化
codegen-units = 1     # コード生成ユニットを減らし、最適化を強化
panic = "abort"       # panic 時に 'unwind' ではなく 'abort' を使用
strip = "symbols"     # シンボル情報を削除し、必要なデバッグ情報は保持
